# nncollection

./: CMakeLists.txt  README.md
dat/: zindel.txt  zindel_dict.txt
inc/: agent.h  connection.h  csvread.h  dlayer.h  dnetworkadapter.h  dynamicnetwork.h  ffnetwork.h  geneticsimulation.h  jsonarchive.h  layer.h  neuron.h  normalizedvalue.h  precomputedtanh.h  testdata.h
tst/: basictest.cpp  benchmutateprocess.cpp  blurber.cpp  gdax_btc_usd_daily_test.cpp  jsonarchivetest.cpp  normalizedvaluetest.cpp  precomputed_tanh_test.cpp  sinx_train_test.cpp
